--- a/Leng Marca/ProcesamientoJSON_JS/styles.css
+++ b/Leng Marca/ProcesamientoJSON_JS/styles.css
@@ -2,21 +2,40 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #201a52;
     color: #333;
+    background-image: url(./img/fondo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header {
-    background-color: #007BFF;
-    color: white;
+    background-color: white;
+    color: #201a52;
     text-align: center;
     padding: 1rem 0;
+    gap: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
+
+.logo{
+    width: 200px;
+    position: absolute;
+    left: 20px;
+}
+
+header h1 {
+    display: flex 
+}
+
 
 main {
     width: 80%;
     margin: 20px auto;
-    background: white;
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -35,7 +54,7 @@ p {
 }
 
 #proyectos-container {
-    border-top: 2px solid #007BFF;
+    border-top: 2px solid #8fb529;
     padding-top: 10px;
 }
 
@@ -62,7 +81,7 @@ h5 {
     min-width: 250px;
 }
 
-.tarea-card strong {
+.tarea-card b {
     display: block;
     color: #333;
     margin-bottom: 5px;
@@ -71,4 +90,79 @@ h5 {
 .tarea-card span {
     display: block;
     color: #666;
+}
+
+.devs {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    color: #201a52;
+}
+
+.devs img{
+    width: 150px;
+    display: flex;
+    justify-self: center;
+}
+
+.devs div{
+    background-color: white;
+    padding: 15px;
+    border-radius: 20px;
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.3);
+    transition: transform 0.3s ease;
+}
+
+.devs div:hover{
+    transform: scale(1.1);
+}
+
+.devs b {
+    color: #8fb529;
+}
+
+hr{
+    border: none;
+    border-top: 2px solid #8fb529;
+    margin: 10px 0;
+}
+
+/* Estilos para proyectos y tareas */
+.proyecto {
+    background: #f9f9f9;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.tareas-lista {
+    list-style: none;
+    padding-left: 0;
+}
+
+.tareas-lista li {
+    padding: 10px;
+    margin-bottom: 10px;
+    background: #fff;
+    border-left: 4px solid #201a52;
+}
+
+.estado.completada {
+    color: #2ecc71;
+}
+
+.estado.pendiente {
+    color: #e74c3c;
+}
+
+#profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: -10px;
+}
+
+#profile b{
+    color: #8fb529;
 }
